# Thy-Renderer

./: CMakeLists.txt  README.md  camera.cpp  camera.h  gl.cpp  gl.h  main.cpp  scene.cpp  scene.h  shader.cpp  shader.h  shader_struct.h  texture.cpp  texture.h  tri_mesh.cpp  tri_mesh.h  triangle.cpp  triangle.h
Utils/: OBJ_Loader.cpp  OBJ_Loader.h  constant_value.h  matrix.cpp  matrix.h  numeric.cpp  numeric.h  pdf.cpp  pdf.h  random_util.cpp  random_util.h
